data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4121.wast
;; 10. **Direct Call with Unreachable Fallback**:    Design a direct function call falling back to `call_indirect` when an error occurs, leading to an `unreachable` instruction. Ensure the handling of exceptions and fallbacks properly, showcasing dynamic error handling.

(assert_invalid
  (module
    (type $func_type (func (param i32) (result i32)))
    (func $main
      unreachable
      (call_indirect (type $func_type) (i32.const 0))
    )
    (table 1 funcref)
  )
  "type mismatch"
)